# qiskit-omelyan

./: .gitignore  README.md  pyproject.toml
examples/: README.md  __init__.py  blanes_moan6.py  forest_ruth4.py  leapfrog.py  leapfrog2.py  leapfrog2_circuit.py  leapfrog_circuit.py  leapfrog_error.py  malezic_ostmeyer4.py  malezic_ostmeyer6.py  morales10.py  morales8.py  omelyan2.py  omelyan4.py  yoshida6.py
examples/native/: custom.py  forest_ruth4.py  leapfrog2.py  malezic_ostmeyer6.py  model.py  morales10.py  omelyan2_circuit.py  omelyan4.py
examples/plugin/: custom_scheme.py  named_scheme.py
src/qiskit_omelyan/: __init__.py  omelyan_plugin.py  omelyan_schemes.py  omelyan_trotter.py
tests/: Heisenberg_model.py  heisenberg_model.py  leapfrog_test.py  test_correctness_small.py  test_schemes_smoke.py
