[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit-omelyan"
version = "0.1.0"
description = "Omelyan-based product formulas for time evolution in Qiskit"
authors = [
    { name="Marko Maležič" }
]
dependencies = [
    "qiskit>=2.0"
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}